# secure-vault-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini
include/auth/: AuthManager.h
include/encryption/: Encryption.h
include/models/: Credential.h
include/storage/: StorageManager.h
include/utils/: CryptoUtils.h  GeneratorUtils.h  SecurityUtils.h  StringUtils.h  SystemUtils.h
include/vault/: VaultManager.h
include/web/: WebPortal.h
src/: main.cpp
src/auth/: AuthManager.cpp
src/encryption/: Encryption.cpp
src/storage/: StorageManager.cpp
src/utils/: CryptoUtils.cpp  GeneratorUtils.cpp  RecoveryUtils.h  SecurityUtils.cpp  StringUtils.cpp  SystemUtils.cpp
src/vault/: VaultManager.cpp
tests/: test_delimiter.cpp
